GNOME Bugzilla – Bug 672367
[regression] Toggle-able table cells lack the 'toggle' action
Last modified: 2012-03-19 01:27:11 UTC
Steps to reproduce: 1. Launch gtk3-demo 2. Launch the Tree Store demo 3. Examine the checkboxes using Accerciser's Interface Viewer Expected results: The Action interface would include 'toggle'. Actual results: The Action interface lacks 'toggle'. Notes: * This action used to be present. I do not yet know when it went away. * Primary impact: Orca cannot present the fact that a cell can be checked. * Secondary impact: Due to the lack of STATE_CHECKABLE, Orca relies upon this action as a means to identify which toggle-able table cells can be checked. If an object can be checked, it THEN checks for STATE_CHECKED. Thus at the moment, Orca is not presenting "checked" or "unchecked" for these items. The best it can do is always look for STATE_CHECKED and present it if it is found; but that would be a work around, and it still would not solve the problem for items which are unchecked.
I readded the toogle action in gtk master.